@@ -58,7 +58,7 @@ inline int getBuildDate()
 #endif //_GETBUILD_DATE_
 // protocol version
 #ifndef BZ_PROTO_VERSION
-#define BZ_PROTO_VERSION "109a"
+#define BZ_PROTO_VERSION "1.9.2"
 #endif //BZ_PROTO_VERSION
 
 #ifndef BZ_MAJOR_VERSION
@@ -70,7 +70,7 @@ inline int getBuildDate()
 #endif
 
 #ifndef BZ_REV
-#define BZ_REV				1
+#define BZ_REV				2
 #endif
 
 #ifndef BZ_BUILD_TYPE
